# Practica-13SD

./: CMakeLists.txt  PaqueteDatagrama.cpp  PaqueteDatagrama.h  Respuesta.cpp  Respuesta.h  SocketDatagrama.cpp  SocketDatagrama.h  Solicitud.cpp  Solicitud.h  cliente  cliente.cpp  makefilecliente  makefileservidor  mensaje.h  servidor  servidor.cpp
